--- a/public/soilhealth.css
+++ b/public/soilhealth.css
@@ -209,10 +209,10 @@ gmp-map {
   font-size: 18px;
   color: #fff;
   text-align: center;
-  background: #1d1233;
+  background: rgb(4, 54, 74);
   transition: 0.2s ;
 }
-.showmore{
+.Showmore{
   background: transparent;
   text-decoration: none;
   outline: none;
@@ -344,7 +344,7 @@ gmp-map {
   justify-content: space-between;
   flex-direction:column;
   gap: 10px;
-  box-shadow:  0px 0px 20px rgba(0, 0, 0, 0.3); 
+  box-shadow:  0px 0px 10px rgba(0, 0, 0, 0.1); 
 
    }
    .data img{
@@ -410,7 +410,7 @@ form .btn2{
     border-radius: 10px;
     cursor: pointer;
     color: white;
-    background: linear-gradient(#4c0db1,#482b7c);
+    background: rgb(4, 54, 74);
     border: none;
 }
 form .btn2:hover{
@@ -435,7 +435,6 @@ svg{
 
     .header{
         background-image:linear-gradient(to bottom, rgba(14, 13, 13, 0.838) 15%,transparent 90%),url(left.jpg);
-        height: 350px;
         background-position: center;
         background-size: cover;
         
@@ -481,12 +480,15 @@ svg{
       font-family: 'Montserrat', sans-serif;
    
     }
-    
+   form{
+    padding: 20px 0;
+   } 
 .save-delete{
   display: grid;
   grid-template-columns: 80% 20%;
   gap: 5px;
-  margin: 10px 20px;
+  margin: 0px 20px;
+  margin-bottom: 40px;
 }
 .delete {
   padding: 19px;
@@ -497,7 +499,7 @@ svg{
   border-radius: 10px;
   cursor: pointer;
   color: white;
-  background:linear-gradient(#251742,#482b7c) ;
+  background:rgb(4, 54, 74) ;
   border: none;
 }
 .delete i{
@@ -643,6 +645,7 @@ svg{
       margin-top: 0%;
       grid-template-columns: auto;
       gap:10px;
+      margin-bottom: 100px;
     }
     
     
@@ -658,8 +661,8 @@ svg{
     color: black;
     padding: 30px 20px;
     border-radius: 15px;
-    margin: 10px;
-    box-shadow:  0px 0px 20px rgba(0, 0, 0, 0.1);
+   
+   
    
    }
    .image{
@@ -676,114 +679,82 @@ svg{
    }
     
     
-    nav ul{
-        display: block;
-      }
-      nav .fa-solid{
-        display: block;
-        font-size: 25px;
-        margin: 20px;  
-        padding-left: 80%; 
-        color: black;
-        z-index: 1;
-        cursor: pointer;
-    }
-   
-    nav .fa-times{
-      display: block;
-      font-size: 25px;
-      margin: 20px;  
-      color: white;
-      z-index: 2;
-      cursor: pointer;
-    }
-    nav .hero-btn2{
-      display: none;
-    }
-    nav ul{
-        background:linear-gradient(#4c0db1,#482b7c) ;
-        position: fixed;
-        top: 0;
-        right: -80%;
-        width: 80%;
-        text-align: center;
-        height: 100vh;
-        padding-top: 10px;
-        z-index: 2;
-        transition: right 0.5s;
-        cursor: pointer;
-        text-align: left;
-    
-    }
-    nav #sidemenu .fa-solid{
-        margin: 3px;
-    }
-    #sidemenu li i{
-        color: white;
-      }
-      #sidemenu hr{
-        color: white;
-        height: 1px;
-      }
-      #sidemenu p{
-        margin-top: 20px;
-        padding: 30px;
-        color: white;
-        text-align: left;
-        font-family: system-ui;
-        font-size: 20px;
-      }
-      .loginpage{
-        display: flex;
-        flex-direction: row;
-        margin: 10px;
-        justify-content: space-evenly;
-      }
-      #sidemenu .login{
-        background-color: white;
-        color: black;
-        font-size: 20px;
-        padding: 10px 25px;
-        border-radius: 10px;
-        text-align: center;
-        display: block;
-        font-weight: 600;
-      }
-      #sidemenu .join{
-        background:#1d1233;
-        color: white;
-      }
-    nav ul li{
-        display: block;
-        margin: 10px;
-        padding: 5px;
-        font-size: 10px;
-       
-        
-          
-    }
-    nav ul li a:hover::after{
-      width: 0%;
-    }
-    nav ul li :hover{
-   
-      color: black;
-    }
-    nav ul li a{
-         color: white;
-         font-weight: 400;
-         font-size: 20px;
-        font-family: system-ui;
-        
-    }
-    nav ul .fas{
-        position: absolute;
-        top: 25px;
-        padding: 20px;
-        left: 300px;
-        cursor: pointer;
-        color: white;
-    }
+   nav ul{
+    display: block;
+  }
+  
+  nav .fa-solid{
+    display: block;
+    font-size: 25px;
+    padding: 30px;  
+    padding-left: 85%; 
+    color: white;
+    z-index: 1;
+    cursor: pointer;
+}
+nav .fa-times{
+  display: block;
+  font-size: 25px;
+  margin: 20px;  
+  color: white;
+  z-index: 2;
+  cursor: pointer;
+}
+nav .hero-btn2{
+  display: none;
+}
+
+nav ul li{
+  display: block;
+  margin: 15px 10px;
+  padding: 5px;
+  font-size: 10px;
+ 
+}
+nav ul{
+  background:white;
+  position: fixed;
+  top: 0;
+  right: -100%;
+  width: 100%;
+  text-align: center;
+  height: 100vh;
+  padding-top: 10px;
+  z-index: 2;
+  transition: right 0.5s;
+  cursor: pointer;
+  text-align: left;
+
+}
+nav ul li a{
+  color: rgb(59, 57, 57);
+  font-weight: 600;
+  font-size: 19px;
+  font-family: 'Montserrat', sans-serif;
+ 
+}
+
+nav ul li a:hover::after{
+
+width: 0%;
+
+}
+nav ul li :hover{
+
+color: black;
+
+}
+nav ul .fas{
+ position: absolute;
+ top: 25px;
+ padding: 20px;
+ left: 300px;
+ cursor: pointer;
+ color: white;
+}
+nav #sidemenu .fa-solid{
+  margin: 3px;
+}
     
     #sidemenu form{
       padding-top: 60px;
