--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
          <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -144,12 +145,12 @@
              </a>    
         </div>
         <div class="Date-time">
-            <div class="visit">
+            
                 <div class="visit-schedule">
                     <a>UPDATES</a>
                 </div> 
                 <p>Booth committe will commence on 18 july 24</p>
-            </div>
+         
         </div>
     </section>
               
