--- a/public/welcome.css
+++ b/public/welcome.css
@@ -497,7 +497,7 @@ nav #sidemenu .fa-solid{
 }
  .product{
       width: auto;
-      padding: 10 ;
+      padding: 10px;
       background: none;
          
   }
