--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -17,7 +17,12 @@
          <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     </head>
     <body>
-       
+        <div id="loader-container" class="loader-container">
+            <div class="loader">
+                <div class="spinner"></div>
+                
+            </div>
+        </div>
         <div id="sidemenu2">
 
             <p>Support</p>
@@ -178,8 +183,20 @@
   
     document.getElementById("greeting").innerHTML = greeting;
     
-   
+
+    document.addEventListener("DOMContentLoaded", function() {
+    // Simulate loading process with a timeout
+    setTimeout(function() {
+        // Hide the loader container
+        document.getElementById('loader-container').style.display = 'none';
+        
+        // Show the content
+        document.getElementById('content').style.display = 'block';
+    }, 3000); // Simulated loading time in milliseconds
+});
+
    
 </script>
+
 </body>
 </html>
