--- a/public/login.css
+++ b/public/login.css
@@ -235,9 +235,47 @@ form .btn2:hover{
 
 @media(max-width:800px){
 
+    
+.loader-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(255, 255, 255, 0.8); 
+  backdrop-filter: blur(10px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; 
+}
+
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.spinner {
+  border: 8px solid rgba(0, 0, 0, 0.1);
+  border-top: 8px solid rgb(224, 52, 52);
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 2s linear infinite;
+  position: absolute;
+}
+
+
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
 
     body{
-      background-image: linear-gradient(to top, #fff1eb 0%, #f9acac 100%);
+      background-image: white;
     }
     .header{
    
@@ -338,11 +376,11 @@ form .btn2:hover{
     .contact .row{
         margin-top: 0%;
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         
     }
     .contact-col{
-        margin: 0px;
+        margin: 150px 0px;
         padding: 0px 10px;
         
         
